Closed Bug 1116367 Opened 10 years ago Closed 10 years ago

MSVC2012 bustage - BaseAssembler-x86-shared.h(33) : fatal error C1083: Cannot open include file: 'inttypes.h': No such file or directory

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37

People

(Reporter: RyanVM, Assigned: sunfish)

References

Details

Attachments

(1 file)

10:24.37 c:/Users/Ryan/repos/mozilla-central/config/rules.mk:930: recipe for target 'RegExp.obj' failed 10:24.37 mozmake.EXE[5]: *** [RegExp.obj] Error 1 10:24.37 mozmake.EXE[5]: *** Waiting for unfinished jobs.... 10:24.65 CTypes.cpp 10:24.65 c:\users\ryan\repos\mozilla-central\js\src\jit/shared/BaseAssembler-x86-shared.h(33) : fatal error C1083: Cannot open include file: 'inttypes.h': No such file or directory
Flags: needinfo?(sunfish)
It appears we have "mozilla/MSIntTypes.h" which should be used here in place of <inttypes.h>. I'll submit a patch soon.
Assignee: nobody → sunfish
Flags: needinfo?(sunfish)
No. Use the cross-platform "mozilla/IntegerPrintfMacros.h" instead. The other is purely an implementation detail, not meant to be used directly.
Since MSVC2013 apparently does ship inttypes.h (given the lack of bustage in automation), should we consider changing this condition to _MSC_VER < 1800? http://mxr.mozilla.org/mozilla-central/source/mfbt/IntegerPrintfMacros.h#35
Nevermind, I see that's what MSIntTypes.h already does, though maybe it'd be more clear still having that logic in IntegerPrintfMacros.h instead.
Ah, thanks for the correction. Attached is a patch which uses IntegerPrintfMacros.h. I've verified that this passes check_spidermonkey_style.py.
Attachment #8542396 - Flags: review?(jwalden+bmo)
Attachment #8542396 - Flags: review?(jwalden+bmo) → review+
Comment on attachment 8542396 [details] [diff] [review] use-integerprintfmacros.patch Verified locally that this un-breaks my build :)
Attachment #8542396 - Flags: feedback+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: