Bug 1116367 - SpiderMonkey: Use mozilla/IntegerPrintfMacros.h instead of inttypes.h r=Waldo